languages/io-automaton-fe/src/test/resources/valid/imports/AutomatonWithRegularImport.ioautomaton
package valid.imports;

import java.util.List;
import java.util.Set;
import valid.imports.Test;

automaton AutomatonWithRegularImport{
	input int i;
	output int o;
	
	state S;
	initial S;
}