languages/io-automaton-fe/src/test/resources/invalid/AutomatonWithoutEvent.ioautomaton
package invalid;

automaton AutomatonWithoutEvent {

    output int i;

	state Idle;	
	initial Idle;
	
	Idle;		
}